--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/mapbox-gl": "^2.7.8",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
