--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,9 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/ng-09-mapas-app",
+            "allowedCommonJsDependencies": [
+              "mapbox-gl"
+           ],
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
